Fixed build scripts.