@@ -27,23 +27,36 @@ pid_metrics_portal=
 start_ckg=0
 clear_logs=
 pinger=
+skip_build=
+
+mad_jvm_xms="64m"
+mad_jvm_xmx="1024m"
+cagg_jvm_xms="64m"
+cagg_jvm_xmx="1024m"
+mportal_jvm_xms="64m"
+mportal_jvm_xmx="1024m"
+
+mad_debug_port=9001
+cagg_debug_port=9002
+mportal_debug_port=9003
 
 function show_help {
   echo "Usage:"
   echo "./build.sh -h|-?"
-  echo "./build.sh -s SERVICE [-c] [-p] [-v]"
-  echo "./build.sh -a [-c] [-p] [-v]"
+  echo "./build.sh -s SERVICE [-c] [-p] [-n] [-v]"
+  echo "./build.sh -a [-c] [-p] [n-] [-v]"
   echo ""
   echo " -h|-? -- print this help message"
   echo " -s service -- specify a service to start "
   echo "               services accepted:"
   echo "                 mad"
-  echo "                 cluster-aggregator"
-  echo "                 metrics-portal"
+  echo "                 cagg"
+  echo "                 mportal"
   echo "                 ckg"
   echo " -a -- start all services"
   echo " -c -- clear logs"
   echo " -p -- run pinger"
+  echo " -n -- don't build"
   echo " -v -- verbose mode"
 }
 
@@ -55,6 +68,7 @@ function is_dead() {
 function handle_interrupt {
   if [ $start_ckg -gt 0 ]; then
     pushd ${dir} &> /dev/null
+    vagrant ssh -c 'sudo /vagrant/vagrant-stop.sh'
     vagrant suspend
     popd &> /dev/null
   fi
@@ -99,7 +113,7 @@ function find_path_up {
 
 # Parse Options
 OPTIND=1
-while getopts ":h?vpacs:" opt; do
+while getopts ":h?vnpacs:" opt; do
   case "$opt" in
     h|\?)
       show_help
@@ -114,12 +128,15 @@ while getopts ":h?vpacs:" opt; do
     p)
       pinger=1
       ;;
+    n)
+      skip_build=1
+      ;;
     a)
       services+=("mad")
       start_mad=1
-      services+=("cluster-aggregator")
+      services+=("cagg")
       start_cluster_agg=1
-      services+=("metrics-portal")
+      services+=("mportal")
       start_metrics_portal=1
       services+=("ckg")
       start_ckg=1
@@ -129,10 +146,10 @@ while getopts ":h?vpacs:" opt; do
       if [ ${lower_service} == "mad" ]; then
         services+=("mad")
         start_mad=1
-      elif [ ${lower_service} == "cluster-aggregator" ]; then
+      elif [ ${lower_service} == "cagg" ]; then
         services+=("cluster-aggregator")
         start_cluster_agg=1
-      elif [ ${lower_service} == "metrics-portal" ]; then
+      elif [ ${lower_service} == "mportal" ]; then
         services+=("metrics-portal")
         start_metrics_portal=1
       elif [ ${lower_service} == "ckg" ]; then
@@ -198,28 +215,29 @@ if [ -n "$verbose" ]; then
 fi
 
 # Build projects
-if [ $start_metrics_portal -gt 0 ]; then
+if [ $start_metrics_portal -gt 0 ] && [ -z "$skip_build" ]; then
   pushd ${dir_metrics_portal} &> /dev/null
   ./activator stage
   if [ "$?" -ne 0 ]; then echo "Build failed: metrics-portal"; exit 1; fi
   popd &> /dev/null
 fi
 
-if [ $start_mad -gt 0 ]; then
+if [ $start_mad -gt 0 ] && [ -z "$skip_build" ]; then
   pushd ${dir_mad} &> /dev/null
-  ./mvnw install -DskipAllVerification=true -DskipSources=true -DskipJavaDoc=true
+  ./jdk-wrapper.sh ./mvnw install -DskipAllVerification=true -DskipSources=true -DskipJavaDoc=true
   if [ "$?" -ne 0 ]; then echo "Build failed: mad"; exit 1; fi
   popd &> /dev/null
 fi
 
-if [ $start_cluster_agg -gt 0 ]; then
+if [ $start_cluster_agg -gt 0 ] && [ -z "$skip_build" ]; then
   pushd ${dir_cluster_agg} &> /dev/null
-  ./mvnw install -DskipAllVerification=true -DskipSources=true -DskipJavaDoc=true
+  ./jdk-wrapper.sh ./mvnw install -DskipAllVerification=true -DskipSources=true -DskipJavaDoc=true
   if [ "$?" -ne 0 ]; then echo "Build failed: cluster-aggregator"; exit 1; fi
   popd &> /dev/null
 fi
 
 if [ $start_ckg -gt 0 ]; then
+  # IMPORTANT: Do not skip "build" for Vagrant!
   pushd ${dir} &> /dev/null
   vagrant up
   if [ "$?" -ne 0 ]; then echo "Build failed: ckg"; exit 1; fi
@@ -230,10 +248,8 @@ fi
 if [ $start_ckg -gt 0 ]; then
   pushd ${dir} &> /dev/null
   if [ -n "$pinger" ]; then
-    ${dir}/pinger.sh ${verbose_arg} -u "http://localhost:8082     " -n "kairos" &
-    # TODO(ville): No unauthenticated endpoint available on Graphana
-    # See: https://github.com/grafana/grafana/issues/3302
-    #${dir}/pinger.sh ${verbose_arg} -u "http://localhost:8081" -n "graphana" &
+    ${dir}/pinger.sh ${verbose_arg} -u "http://localhost:8082           " -n "kairos" &
+    ${dir}/pinger.sh ${verbose_arg} -u "http://localhost:8081/api/health" -n "graphana" &
   fi
   popd &> /dev/null
 fi
@@ -245,12 +261,30 @@ if [ $start_cluster_agg -gt 0 ]; then
   fi
   rm -rf ./target/h2
   rm -rf ./journal
-  rm -rf ./query.log
-  ./target/appassembler/bin/cluster-aggregator ${dir}/config/clusteragg/config.json &
+  mkdir -p "${dir_cluster_agg}/logs"
+  ./target/appassembler/bin/cluster-aggregator \
+      "-Xdebug" \
+      "-XX:+HeapDumpOnOutOfMemoryError" \
+      "-XX:HeapDumpPath=${dir_cluster_agg}/logs/cagg.oom.hprof" \
+      "-XX:+PrintGCDetails" \
+      "-XX:+PrintGCDateStamps" \
+      "-Xloggc:${dir_cluster_agg}/logs/cagg.gc.log" \
+      "-XX:NumberOfGCLogFiles=2" \
+      "-XX:GCLogFileSize=50M" \
+      "-XX:+UseGCLogFileRotation" \
+      "-Xms${cagg_jvm_xms}" \
+      "-Xmx${cagg_jvm_xmx}" \
+      "-XX:+UseStringDeduplication" \
+      "-XX:+UseG1GC" \
+      "-Duser.timezone=UTC" \
+      "-Xrunjdwp:server=y,transport=dt_socket,address=${cagg_debug_port},suspend=n" \
+      "-Dlogback.configurationFile=${dir}/config/cagg/logback.xml" \
+      -- \
+      "${dir}/config/cagg/config.conf" &
   pid_cluster_agg=$!
   echo "Started: cluster-aggregator ($pid_cluster_agg)"
   if [ -n "$pinger" ]; then
-    ${dir}/pinger.sh ${verbose_arg} -u "http://localhost:7066/ping" -n "cagg" &
+    ${dir}/pinger.sh ${verbose_arg} -u "http://localhost:7066/ping      " -n "cagg" -p "${pid_cluster_agg}" &
   fi
   popd &> /dev/null
 fi
@@ -260,37 +294,63 @@ if [ $start_mad -gt 0 ]; then
   if [ -n "$clear_logs" ]; then
     rm -rf ./logs
   fi
-  rm -rf ./query.log
-  ./target/appassembler/bin/mad ${dir}/config/mad/config.json &
+  mkdir -p "${dir_mad}/logs"
+  ./target/appassembler/bin/mad \
+      "-Dlogback.configurationFile=${dir}/config/mad/logback.xml" \
+      "-XX:+HeapDumpOnOutOfMemoryError" \
+      "-XX:HeapDumpPath=${dir_mad}/logs/mad.oom.hprof" \
+      "-XX:+PrintGCDetails" \
+      "-XX:+PrintGCDateStamps" \
+      "-Xloggc:${dir_mad}/logs/mad.gc.log" \
+      "-XX:NumberOfGCLogFiles=2" \
+      "-XX:GCLogFileSize=50M" \
+      "-XX:+UseGCLogFileRotation" \
+      "-Xms${mad_jvm_xms}" \
+      "-Xmx${mad_jvm_xmx}" \
+      "-XX:+UseStringDeduplication" \
+      "-XX:+UseG1GC" \
+      "-Duser.timezone=UTC" \
+      "-Xdebug" \
+      "-Xrunjdwp:server=y,transport=dt_socket,address=${mad_debug_port},suspend=n" \
+      -- \
+      "${dir}/config/mad/config.conf" &
   pid_mad=$!
   echo "Started: mad ($pid_mad)"
   if [ -n "$pinger" ]; then
-    ${dir}/pinger.sh ${verbose_arg} -u "http://localhost:7090/ping" -n "mad" &
+    ${dir}/pinger.sh ${verbose_arg} -u "http://localhost:7090/ping      " -n "mad" -p "${pid_mad}" &
   fi
   popd &> /dev/null
 fi
 
 if [ $start_metrics_portal -gt 0 ]; then
   pushd ${dir_metrics_portal} &> /dev/null
-  if [ -e "./target/universal/stage/RUNNING_PID" ]; then
-    pid=`cat ./target/universal/stage/RUNNING_PID`
-    if kill -0 ${pid}; then
-      echo "Service still running: metrics-portal"
-      exit 1
-    else
-      echo "Removing pid file for metrics-portal"
-      rm "./target/universal/stage/RUNNING_PID"
-    fi
-  fi
   if [ -n "$clear_logs" ]; then
     rm -rf ./logs
   fi
   rm -rf ./target/h2
-  ./target/universal/stage/bin/metrics-portal -Dhttp.port=8080 -Dconfig.resource=portal.application.conf &
+  mkdir -p "${dir_metrics_portal}/logs"
+  ./target/universal/stage/bin/metrics-portal \
+      "-Dconfig.file=${dir}/config/metrics-portal/dev.conf" \
+      "-Dlogger.file=${dir}/config/metrics-portal/logback.xml" \
+      "-J-XX:+HeapDumpOnOutOfMemoryError" \
+      "-J-XX:HeapDumpPath=${dir_metrics_portal}/logs/metrics-portal.oom.hprof" \
+      "-J-XX:+PrintGCDetails" \
+      "-J-XX:+PrintGCDateStamps" \
+      "-J-Xloggc:${dir_metrics_portal}/logs/metrics-portal.gc.log" \
+      "-J-XX:NumberOfGCLogFiles=2" \
+      "-J-XX:GCLogFileSize=50M" \
+      "-J-XX:+UseGCLogFileRotation" \
+      "-J-Xms${mportal_jvm_xms}" \
+      "-J-Xmx${mportal_jvm_xmx}" \
+      "-J-XX:+UseStringDeduplication" \
+      "-J-XX:+UseG1GC" \
+      "-J-Duser.timezone=UTC" \
+      "-J-Xdebug" \
+      "-J-Xrunjdwp:server=y,transport=dt_socket,address=${mportal_debug_port},suspend=n" &
   pid_metrics_portal=$!
   echo "Started: metrics-portal ($pid_metrics_portal)"
   if [ -n "$pinger" ]; then
-    ${dir}/pinger.sh ${verbose_arg} -u "http://localhost:8080/ping" -n "mportal" &
+    ${dir}/pinger.sh ${verbose_arg} -u "http://localhost:8080/ping      " -n "mportal" -p "${pid_metrics_portal}" &
   fi
   popd &> /dev/null
 fi
